Fixed white space at top of overlay

--- a/projects/data-vis/assets/main.css
+++ b/projects/data-vis/assets/main.css
@@ -91,7 +91,7 @@ svg {
 
 .overlay {
   position: absolute;
-  top: 144px;
+  top: 0px;
   left: 0px;
   height: 100%;
   width: 100%;
